--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,600' rel='stylesheet' type='text/css'>
-    <link href="css/custom.css" rel="stylesheet" media="screen">
+    <link href="/css/custom.css" rel="stylesheet" media="screen">
   </head>
   
   <body>
@@ -16,7 +16,7 @@
         <ul class="nav nav-pills pull-right">
           <li><a href="#">About</a></li>
           <li><a href="#">Bikes</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="blog.html">Blog</a></li>
         </ul>
       </div>
     </nav>
