continued styling page, replaced lorem ipsum

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,11 +12,11 @@
     
     <nav>
       <div class="container">
-        <a href="/index.html" class="pull-left logo"><span>Planet Argon Bicycles</span></a>
+        <a href="/" class="pull-left logo"><span>Planet Argon Bicycles</span></a>
         <ul class="nav nav-pills pull-right">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Bikes</a></li>
-          <li><a href="/blog.html">Blog</a></li>
+          <li><a href="/index.html#about">About</a></li>
+          <li><a href="/index.html#bikes">Bikes</a></li>
+          <li><a href="#">Blog</a></li>
         </ul>
       </div>
     </nav>
@@ -47,9 +47,9 @@
             <h3>Join our Mailing List</h3>
             <form>
               <label for="name">Name</label>
-              <input type="text" id="name" class="input-block-level" placeholder="Lex Luthor" />
+              <input type="text" id="name" class="input-block-level" placeholder="Lance Armstrong" />
               <label for="email">Email address</label>
-              <input type="text" id="email" class="input-block-level" placeholder="lexluthor@email.com" />
+              <input type="text" id="email" class="input-block-level" placeholder="lance@email.com" />
               <p class="text-center"><button type="submit" class="btn btn-large">Submit</button></p>
             </form>
           </div>
