--- a/css/scss/custom.scss
+++ b/css/scss/custom.scss
@@ -21,6 +21,7 @@ a {
   }
 }
 .banner {
+  @include prefix(box-shadow, 0 4px 0 rgba(0,0,0,.5));
   color: #FFF;
   margin: 0 auto 20px;
   max-width: 300px;
@@ -30,6 +31,7 @@ a {
   width: 75%;
   height: 40px;
   &:before, &:after {
+    @include prefix(box-shadow, 0 4px 0 rgba(0,0,0,.5));
     content: "";
     border-style: solid;
     position: absolute;
@@ -225,6 +227,7 @@ footer {
 
 // BLOG ============================================================================== //
 .section-blog {
+  color: #222;
   padding-top: 70px;
   .container {
     max-width: 900px;
