re-align buttons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
               <input type="text" id="name" class="input-block-level" placeholder="Lance Armstrong" />
               <label for="email">Email address</label>
               <input type="text" id="email" class="input-block-level" placeholder="lance@email.com" />
-              <p class="text-center"><button type="submit" class="btn btn-large">Submit</button></p>
+              <p class="text-right"><button type="submit" class="btn btn-large">Submit</button></p>
             </form>
           </div>
         </div>
