--- a/css/creative.css
+++ b/css/creative.css
@@ -42,7 +42,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 p {
@@ -197,7 +197,7 @@ header .header-content .header-content-inner h1 {
     margin-top: 0;
     margin-bottom: 0;
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 100;
 }
 
 header .header-content .header-content-inner hr {
